https://bugzilla.novell.com/show_bug.cgi?id=171946 https://bugzilla.novell.com/show_bug.cgi?id=172005
added setting for page size
misc search improvements



git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6365 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Makefile.am
+++ b/simias/src/webaccess/Makefile.am
@@ -28,9 +28,11 @@ iFolderWeb_CSFILES = \
 	$(srcdir)/Share.aspx.cs \
 	$(srcdir)/iFolderNew.aspx.cs \
 	$(srcdir)/iFolderEdit.aspx.cs \
+	$(srcdir)/Settings.aspx.cs \
 	$(srcdir)/UploadModule.cs \
 	$(srcdir)/UploadStream.cs \
 	$(srcdir)/WebLogger.cs \
+	$(srcdir)/WebSettings.cs \
 	$(srcdir)/WebUtility.cs
 	
 iFolderWeb_CSFILES_CSC := $(subst /,$(SEP),$(iFolderWeb_CSFILES))
@@ -61,7 +63,7 @@ iFolderWeb_LIBPATH = $(LOG4NET_DIR)
 
 iFolderWeb_FORMS = \
 	Global.asax \
-    Default.aspx \
+	Default.aspx \
 	Browse.aspx \
 	Search.aspx \
 	NewFolder.aspx \
@@ -76,6 +78,7 @@ iFolderWeb_FORMS = \
 	iFolderNew.aspx \
 	iFolderEdit.aspx \
 	Share.aspx \
+	Settings.aspx \
 	Quota.ascx \
 	Header.ascx \
 	Message.ascx \
