Fixed bug 171303. The create ifolder is now a wizard that walks through the process of creating an ifolder, including allowing the owner to be selected.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6368 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/Makefile.am
+++ b/simias/src/admin/Makefile.am
@@ -4,6 +4,7 @@ export MONO_PATH := $(MONO_PATH)
 iFolderAdmin_CSFILES = \
 	$(srcdir)/AccountEnabled.ascx.cs \
 	$(srcdir)/AssemblyInfo.cs \
+	$(srcdir)/CreateiFolder.aspx.cs \
 	$(srcdir)/CreateUser.aspx.cs \
 	$(srcdir)/Default.aspx.cs \
 	$(srcdir)/DiskSpaceQuota.ascx.cs \
@@ -63,9 +64,10 @@ iFolderAdmin_LIBPATH = $(LOG4NET_DIR)
 
 iFolderAdmin_FORMS = \
 	AccountEnabled.ascx \
+	CreateiFolder.aspx \
+	CreateUser.aspx \
 	Default.aspx \
 	DiskSpaceQuota.ascx \
-	CreateUser.aspx \
 	Error.aspx \
 	FileSizeFilter.ascx \
 	FileTypeFilter.ascx \
