--- a/simias/configure.in
+++ b/simias/configure.in
@@ -648,6 +648,7 @@ src/server/Simias.Rss/Makefile
 src/server/Simias.Server/Makefile
 src/server/Simias.LdapProvider/Makefile
 src/server/Simias.ADLdapProvider/Makefile
+src/server/Simias.OpenLdapProvider/Makefile
 src/server/usercmd/Makefile
 src/server/usercmd/simias-create-user
 src/server/usercmd/simias-delete-user
