1 - improved webservices to be called through test utilities 2 - auto-generate WSDL files
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6376 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Makefile.am
+++ b/simias/src/Makefile.am
@@ -3,7 +3,7 @@ DIST_SUBDIRS = core client server webservices webaccess admin setup
 if SIMIAS_AS_CLIENT
 SUBDIRS = core client
 else
-SUBDIRS = core server webservices webaccess admin setup
+SUBDIRS = core server webservices webaccess admin setup utils
 endif
 
 
