changed Simias.config to refer to a system rather than a server.  Changed the default enterprise domain name to iFolder.  Added User type to all provisioned users
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6399 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.config.in
+++ b/simias/src/server/Simias.config.in
@@ -1,7 +1,7 @@
 <configuration>
   <section name="EnterpriseDomain">
-    <setting name="ServerName" value="iFolder Server" />
-    <setting name="Description" value="iFolder Enterprise Server" />
+    <setting name="SystemName" value="iFolder" />
+    <setting name="Description" value="iFolder Enterprise System" />
     <setting name="AdminName" value="admin" />
     <setting name="AdminPassword" value="simias" />
   </section>
