moved some global actions to the left
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6404 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/Makefile.am
+++ b/simias/src/webaccess/Makefile.am
@@ -23,6 +23,7 @@ iFolderWeb_CSFILES = \
 	$(srcdir)/Message.ascx.cs \
 	$(srcdir)/Pagging.ascx.cs \
 	$(srcdir)/HomeContext.ascx.cs \
+	$(srcdir)/iFolderActions.ascx.cs \
 	$(srcdir)/iFolderContext.ascx.cs \
 	$(srcdir)/TabControl.ascx.cs \
 	$(srcdir)/Share.aspx.cs \
@@ -85,6 +86,7 @@ iFolderWeb_FORMS = \
 	Pagging.ascx \
 	HomeContext.ascx \
 	iFolderContext.ascx \
+	iFolderActions.ascx \
 	TabControl.ascx \
 	Download.ashx \
 	Log4Net.config \
