--- a/simias/src/webaccess/iFolderWeb.csproj
+++ b/simias/src/webaccess/iFolderWeb.csproj
@@ -183,22 +183,6 @@
                     BuildAction = "EmbeddedResource"
                 />
                 <File
-                    RelPath = "ItemHistory.aspx"
-                    SubType = "Form"
-                    BuildAction = "Content"
-                />
-                <File
-                    RelPath = "ItemHistory.aspx.cs"
-                    DependentUpon = "ItemHistory.aspx"
-                    SubType = "ASPXCodeBehind"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "ItemHistory.aspx.resx"
-                    DependentUpon = "ItemHistory.aspx.cs"
-                    BuildAction = "EmbeddedResource"
-                />
-                <File
                     RelPath = "Global.asax"
                     SubType = "Component"
                     BuildAction = "Content"
@@ -260,6 +244,22 @@
                 <File
                     RelPath = "HomeContext.ascx.resx"
                     DependentUpon = "HomeContext.ascx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
+                    RelPath = "iFolderActions.ascx"
+                    SubType = "UserControl"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "iFolderActions.ascx.cs"
+                    DependentUpon = "iFolderActions.ascx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "iFolderActions.ascx.resx"
+                    DependentUpon = "iFolderActions.ascx.cs"
                     BuildAction = "EmbeddedResource"
                 />
                 <File
@@ -334,6 +334,22 @@
                     RelPath = "iFolderWebProxy.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ItemHistory.aspx"
+                    SubType = "Form"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "ItemHistory.aspx.cs"
+                    DependentUpon = "ItemHistory.aspx"
+                    SubType = "ASPXCodeBehind"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ItemHistory.aspx.resx"
+                    DependentUpon = "ItemHistory.aspx.cs"
+                    BuildAction = "EmbeddedResource"
                 />
                 <File
                     RelPath = "Log4Net.config"
