--- a/simias/src/server/setup/SimiasServerSetup.csproj
+++ b/simias/src/server/setup/SimiasServerSetup.csproj
@@ -80,16 +80,6 @@
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
-                    Name = "SimiasClient"
-                    AssemblyName = "SimiasClient"
-                    HintPath = "..\..\..\..\stage\web\bin\SimiasClient.dll"
-                />
-                <Reference
-                    Name = "SimiasLib"
-                    AssemblyName = "SimiasLib"
-                    HintPath = "..\..\..\..\final.standalone\web\bin\SimiasLib.dll"
-                />
-                <Reference
                     Name = "Simias.Server"
                     AssemblyName = "Simias.Server"
                     HintPath = "..\Simias.Server\Simias.Server.dll"
@@ -108,6 +98,16 @@
                     Name = "System.Web.Services"
                     AssemblyName = "System.Web.Services"
                     HintPath = "..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Web.Services.dll"
+                />
+                <Reference
+                    Name = "SimiasClient"
+                    AssemblyName = "SimiasClient"
+                    HintPath = "..\..\core\SimiasClient\SimiasClient.dll"
+                />
+                <Reference
+                    Name = "SimiasLib"
+                    AssemblyName = "SimiasLib"
+                    HintPath = "..\..\core\SimiasLib.dll\SimiasLib.dll"
                 />
             </References>
         </Build>
