removed runasserver parameter
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6422 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/simiasserver.cmd.in
+++ b/simias/src/server/simiasserver.cmd.in
@@ -16,11 +16,11 @@ IF %DataDir%=="" GOTO NOSETUP
 set Port=""
 IF %Port%=="" GOTO NOPORT
 
-@web\bin\Simias.exe --datadir %DataDir% --runasserver --port %Port% %*
+@web\bin\Simias.exe --datadir %DataDir% --port %Port% %*
 GOTO END
 
 :NOPORT
-@web\bin\Simias.exe --datadir %DataDir% --runasserver %*
+@web\bin\Simias.exe --datadir %DataDir%  %*
 GOTO END
 
 :NOSETUP
