Changed how Simias.log4net is bootstrapped and initialized. The server and client now both do it the same way.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6427 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/configure.in
+++ b/simias/configure.in
@@ -612,6 +612,7 @@ src/core/Makefile
 src/core/Common/MyDns.cs
 src/core/Common/Simias.config
 src/core/Common/defaults.config
+src/core/Common/Simias.log4net
 src/core/SimiasClient/Makefile
 src/core/SimiasClient/AssemblyInfo.cs
 src/core/SimiasClient/SimiasSetup.cs
