Added the Report class which will control the simias reporting collection. This collection is created when the enterprise domain is created on the master.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6436 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/server/Simias.Server/Makefile.am
+++ b/simias/src/server/Simias.Server/Makefile.am
@@ -15,6 +15,7 @@ SimiasServer_CSFILES = \
 	$(srcdir)/IdentitySyncManager.asmx.cs \
 	$(srcdir)/IProvisionUser.cs \
 	$(srcdir)/Registration.asmx.cs \
+	$(srcdir)/Report.cs \
 	$(srcdir)/IUserProvider.cs \
 	$(srcdir)/User.cs \
 	$(srcdir)/JournalService.cs \
