--- a/simias/src/server/Simias.Server/Simias.Server.csproj
+++ b/simias/src/server/Simias.Server/Simias.Server.csproj
@@ -199,6 +199,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "Report.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Service.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
